# sonar

./: .gitignore  Cargo.toml  LICENSE  NOTES.md  README.md  keybinds.txt  multi.txt
_doc/: NOTES.md
src/: main.rs
test_dir/: file with spaces.txt  nomime  stick_hex
test_dir/another_dir/: deep.txt
