[package]
name = "fuz"
version = "0.1.0"
description = ""
authors = ["matdombrock <dombrock.mathieu@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2024"

[dependencies]
# Colored error reporting (comes with ratatui)
color-eyre = "0.6.3"
# Cross-platform terminal handling (ratatui dependency)
crossterm = "0.29.0"
# Terminal UI library
ratatui = "0.29.0"
# Fuzzy matching library
fuzzy-matcher = "0.3"
# System directory handling
dirs = "6.0.0"
# Guess mime types
mime_guess = "2.0.5"
# Syntax highlighting
syntect = "5.3.0"
# Convert ANSI escape codes to ratatui Spans
ansi-to-tui = "7.0.0"
# Why is this not in the standard library yet? Used for string sanitization.
regex = "1.12.2"
# Image preview
ratatui-image = "8.0.2"
image = "0.25.9"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
# opt-level = "s"
opt-level = 3
strip = true
